--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/SABAY TEMPLATE/index1.css">
+    <link rel="stylesheet" href="index1.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Angkor&family=Battambang:wght@100;300;400;700;900&family=Bokor&family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
@@ -23,11 +23,11 @@
     <nav class="menu-full">
         <div class="menu">
             <ul>
-                <li><a href="/SABAY TEMPLATE/index1.html"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="/SABAY TEMPLATE/Entertainment.html">កម្សាន្ត</a></li>
-                <li><a href="/SABAY TEMPLATE/Technology.html">បច្ចេកវិទ្យា</a></li>
-                <li><a href="/SABAY TEMPLATE/Life.html">ជីវិតនិងសង្គម</a></li>
-                <li><a href="/SABAY TEMPLATE/Sport.html">កីឡា</a></li>
+                <li><a href="index1.html"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="Entertainment.html">កម្សាន្ត</a></li>
+                <li><a href="Technology.html">បច្ចេកវិទ្យា</a></li>
+                <li><a href="Life.html">ជីវិតនិងសង្គម</a></li>
+                <li><a href="Sport.html">កីឡា</a></li>
             </ul>
         </div>
     </nav>
